@@ -1,6 +1,14 @@
+2006-12-03 19:54-EST Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormCore/GormDocument.h: Change declaration for window member 
+	from NSWindow to GormDocumentWindow.
+	* GormCore/GormDocument.m: Move cast from call to setDocument:
+	to call to _docWindow private method.
+
 2006-12-03 19:34-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
-	* GormCore/GormDocument.m: Use setDocument: method in awakeFromNib.
+	* GormCore/GormDocument.m: Cast window for call of
+	setDocument: method in awakeFromNib.
 	* GormCore/GormDocumentWindow.h: Add setDocument: method.
 
 2006-12-02  Matt Rice  <ratmice@gmail.com>
